--- a/app/assets/stylesheets/months.scss
+++ b/app/assets/stylesheets/months.scss
@@ -25,5 +25,34 @@
         max-width: 100%;
       }
   }
+}
+
+.dropdown{
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .left{
+    .dropdown{
+      display: block;
+      img{
+        height: 40px;
+        width: 40px;
+      }
+      .dropdown-menu{
+        background-color: #120A8F;
+      }
+    }
+    .notDropDown{
+      display: none;
+    }
+  }
+
+  #signInSmall{
+    font-size: 10px !important;
+  }
+  #signUpSmall{
+    font-size: 10px !important;
+  }
 
 }
